# bluemoon-gd

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
cmake/: FindSodium.cmake  FindYojimbo.cmake
game/: .gitignore  Main.gd  Main.tscn  Player.tscn  project.godot
src/client/: ClientAdapter.hpp  GameClient.cpp  GameClient.hpp  MessageHandler.hpp  gdbluemoon.cpp  gdbluemoon.hpp  library.cpp  logger.cpp  logger.hpp  main.cpp
src/gd/: gdbluemoon.cpp  gdbluemoon.hpp
src/server/: GameServer.cpp  GameServer.hpp  ServerAdapter.cpp  ServerAdapter.hpp  main.cpp
src/shared/: Character.cpp  Character.hpp  ClientServerConfig.hpp  Entity.cpp  Entity.hpp  EntitySync.hpp  GameMessageFactory.hpp  GameMessageType.hpp  MyMessage.hpp  Player.hpp  PlayerSync.hpp
src/world/: entity.cpp  entity.hpp  main.cpp  node.cpp  node.hpp  world.cpp  world.hpp
